--- a/DesktopCompanion/DesktopCompanion.csproj
+++ b/DesktopCompanion/DesktopCompanion.csproj
@@ -25,8 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\github\DotNetCommons\src\DotNetCommons.WinForms\DotNetCommons.WinForms.csproj" />
-    <ProjectReference Include="..\..\..\github\DotNetCommons\src\DotNetCommons\DotNetCommons.csproj" />
+    <ProjectReference Include="..\DotNetCommons\src\DotNetCommons.WinForms\DotNetCommons.WinForms.csproj" />
+    <ProjectReference Include="..\DotNetCommons\src\DotNetCommons\DotNetCommons.csproj" />
   </ItemGroup>
 
   <ItemGroup>
