Support overlay images

--- a/DesktopCompanion/DesktopCompanion.csproj
+++ b/DesktopCompanion/DesktopCompanion.csproj
@@ -45,4 +45,10 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="nfs11.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
